--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,7 +15,7 @@ rss_sources:
 ai_config:
   provider: "siliconflow"
   api_endpoint: "https://api.siliconflow.cn/v1/chat/completions"
-  api_key: "sk-irxfqroueygovigzjfbfjjetyxobtylkhxwiixzrqwkcalxj"
+  api_key: "*****"
   model: "Qwen/Qwen2.5-32B-Instruct"
   temperature: 0.7
   max_tokens: 1000
@@ -23,6 +23,6 @@ ai_config:
 blog_config:
   type: "typecho"
   api_endpoint: "https://xiaokang.ren"
-  username: "renxk"
-  password: "Typecho@1990930"
-  category: "今日新鲜事"  # 使用分类的缩略名
+  username: "username"
+  password: "password"
+  category: "category"  # 使用分类的缩略名
